# nWave-github

./: framework-catalog.yaml  pyproject.toml
.github/agents/: nw-acceptance-designer-reviewer.agent.md  nw-acceptance-designer.agent.md  nw-agent-builder-reviewer.agent.md  nw-agent-builder.agent.md  nw-data-engineer-reviewer.agent.md  nw-data-engineer.agent.md  nw-ddd-architect-reviewer.agent.md  nw-ddd-architect.agent.md  nw-diverger-reviewer.agent.md  nw-diverger.agent.md  nw-documentarist-reviewer.agent.md  nw-documentarist.agent.md  nw-functional-software-crafter.agent.md  nw-nwave-buddy.agent.md  nw-platform-architect-reviewer.agent.md  nw-platform-architect.agent.md  nw-product-discoverer-reviewer.agent.md  nw-product-discoverer.agent.md  nw-product-owner-reviewer.agent.md  nw-product-owner.agent.md  nw-researcher-reviewer.agent.md  nw-researcher.agent.md  nw-software-crafter-reviewer.agent.md  nw-software-crafter.agent.md  nw-solution-architect-reviewer.agent.md  nw-solution-architect.agent.md  nw-system-designer-reviewer.agent.md  nw-system-designer.agent.md  nw-troubleshooter-reviewer.agent.md  nw-troubleshooter.agent.md
.github/hooks/: des-hooks.json
.github/prompts/: nw-buddy.prompt.md  nw-bugfix.prompt.md  nw-continue.prompt.md  nw-deliver.prompt.md  nw-design.prompt.md  nw-devops.prompt.md  nw-diagram.prompt.md  nw-discover.prompt.md  nw-discuss.prompt.md  nw-distill.prompt.md  nw-diverge.prompt.md  nw-document.prompt.md  nw-execute.prompt.md  nw-fast-forward.prompt.md  nw-finalize.prompt.md  nw-forge.prompt.md  nw-hotspot.prompt.md  nw-mikado.prompt.md  nw-mutation-test.prompt.md  nw-new.prompt.md  nw-refactor.prompt.md  nw-research.prompt.md  nw-review.prompt.md  nw-rigor.prompt.md  nw-roadmap.prompt.md  nw-root-why.prompt.md  nw-spike.prompt.md
.github/skills/nw-ab-critique-dimensions/: SKILL.md
.github/skills/nw-abr-critique-dimensions/: SKILL.md
.github/skills/nw-ad-critique-dimensions/: SKILL.md
.github/skills/nw-agent-creation-workflow/: SKILL.md
.github/skills/nw-agent-testing/: SKILL.md
.github/skills/nw-authoritative-sources/: SKILL.md
.github/skills/nw-buddy-project-reading/: SKILL.md
.github/skills/nw-buddy-ssot-knowledge/: SKILL.md
.github/skills/nw-bugfix/: SKILL.md
.github/skills/nw-command-design-patterns/: SKILL.md
.github/skills/nw-command-optimization-workflow/: SKILL.md
.github/skills/nw-continue/: SKILL.md
.github/skills/nw-deliver/: SKILL.md
.github/skills/nw-design/: SKILL.md
.github/skills/nw-devops/: SKILL.md
.github/skills/nw-discover/: SKILL.md
.github/skills/nw-discovery-methodology/: SKILL.md
.github/skills/nw-distill/: SKILL.md
.github/skills/nw-diverge/: SKILL.md
.github/skills/nw-document/: SKILL.md
.github/skills/nw-execute/: SKILL.md
.github/skills/nw-fast-forward/: SKILL.md
.github/skills/nw-forge/: SKILL.md
.github/skills/nw-hexagonal-testing/: SKILL.md
.github/skills/nw-hotspot/: SKILL.md
.github/skills/nw-new/: SKILL.md
.github/skills/nw-operational-safety/: SKILL.md
.github/skills/nw-por-review-criteria/: SKILL.md
.github/skills/nw-research/: SKILL.md
.github/skills/nw-research-methodology/: SKILL.md
.github/skills/nw-review/: SKILL.md
.github/skills/nw-review-workflow/: SKILL.md
.github/skills/nw-rigor/: SKILL.md
.github/skills/nw-roadmap/: SKILL.md
.github/skills/nw-spike/: SKILL.md
.github/skills/nw-tdd-methodology/: SKILL.md
.github/skills/nw-update/: SKILL.md
src/des/: __init__.py
src/des/adapters/: __init__.py
src/des/adapters/driven/: __init__.py
src/des/adapters/driven/config/: des_config.py
src/des/adapters/driven/hooks/: __init__.py  noop_hook.py
src/des/adapters/driven/logging/: jsonl_audit_log_writer.py
src/des/adapters/driven/task_invocation/: __init__.py  copilot_task_adapter.py
src/des/adapters/drivers/: __init__.py
src/des/adapters/drivers/hooks/: __init__.py  copilot_hook_adapter.py  copilot_subagent_start_handler.py  deliver_progress_handler.py  des_task_signal.py  hook_protocol.py  post_tool_use_handler.py  pre_tool_use_handler.py  pre_write_handler.py  service_factory.py  session_start_handler.py  skill_tracking_hooks.py  subagent_stop_handler.py
src/des/application/: post_tool_use_service.py  skill_tracking_service.py  tdd_template_loader.py  validator.py
src/des/cli/: __init__.py  init_log.py  log_phase.py
src/des/domain/: audit_log_path_resolver.py  des_enforcement_policy.py  des_marker_parser.py  error_codes.py  marker_completeness_policy.py  roadmap_schema.py  step_completion_validator.py  tdd_schema.py  value_objects.py
src/des/ports/driven_ports/: task_invocation_port.py
src/des/ports/driver_ports/: pre_tool_use_port.py  subagent_stop_port.py
templates/: .pre-commit-config-nwave.yaml  AGENT_TEMPLATE.md  COMMAND_TEMPLATE.md  REVIEWER_TEMPLATE.md  SKILL_TEMPLATE.md  execution-log-template.yaml  validation-schemas.json
tests/bugs/des/task-to-agent-migration/acceptance/: test_agent_tool_hook_processing.py  test_enforcement_ordering_without_max_turns.py
tests/des/acceptance/: conftest.py  hook-protocol-conformance.feature  test_dual_layer_enforcement.py  test_enforcement_false_positives.py  test_hook_protocol_conformance.py  test_housekeeping_acceptance.py  test_log_integrity_acceptance.py  test_nwave_gitignore_runtime_creation.py  test_session_start_routing_acceptance.py  test_task_correlation_id_flow.py
tests/des/acceptance/rigor_global_config/: milestone-2-rigor-scope.feature
tests/des/acceptance/rigor_global_config/steps/: scope_steps.py  uninstall_steps.py
tests/des/unit/: test_template_section_alignment.py  test_validator_schema_versioning.py
tests/des/unit/adapters/: test_hook_adapter_resilience.py
tests/des/unit/adapters/driven/tracking/: test_jsonl_skill_tracker.py
tests/des/unit/adapters/drivers/hooks/: test_exec_stats_extraction.py  test_hook_completed_event.py  (+11 more)
tests/des/unit/application/: test_skill_tracking_service.py  test_skill_tracking_transcript.py
tests/des/unit/domain/: test_error_codes.py  test_skill_load_event.py
tests/des/unit/ports/: test_task_invocation_port.py
