[build-system]  
requires = ["hatchling>=1.21.0"]  
build-backend = "hatchling.build"  
  
[tool.hatch.build.targets.wheel]  
packages = ["src/des"]  
  
[project]  
name = "nwave-github"  
version = "3.11.0"  
description = "nWave DES enforcement system for GitHub Copilot + VSCode"  
readme = "README.md"  
license = {text = "MIT"}  
requires-python = ">=3.10"  
authors = [  
    { name = "Michele Brissoni", email = "michele.brissoni@brix.consulting" },  
    { name = "Alessandro Digioia", email = "alessandro.digioia@brix.consulting" }  
]  
contributors = [  
    { name = "Cristian (@StudentCristian)" }  
]  
keywords = [  
    "ai",  
    "developer-tools",  
    "automation",  
    "github-copilot",  
    "vscode",  
    "des"  
]  
classifiers = [  
    "Development Status :: 3 - Alpha",  
    "Environment :: Console",  
    "Intended Audience :: Developers",  
    "License :: OSI Approved :: MIT License",  
    "Operating System :: OS Independent",  
    "Programming Language :: Python :: 3",  
    "Programming Language :: Python :: 3.10",  
    "Programming Language :: Python :: 3.11",  
    "Programming Language :: Python :: 3.12",  
    "Programming Language :: Python :: 3.13",  
    "Topic :: Software Development :: Build Tools",  
    "Typing :: Typed"  
]  
  
dependencies = [  
    "pyyaml>=6.0",  
]  
  
[project.optional-dependencies]  
dev = [  
    # Testing  
    "pytest>=8.0.0",  
    "pytest-cov>=4.1.0",  
    "pytest-asyncio>=0.23.0",  
    "pytest-xdist>=3.5.0",  
    "pytest-bdd>=7.0.0",  
    "pytest-describe-it>=0.1.0",  
    "pytest-html>=4.0.0",  
    "pytest-pspec>=0.0.4",  
    "pytest-mock>=3.12.0",  
    "pytest-describe>=2.1.0",  
    "pytest-watch>=4.2.0",  
    "allure-pytest>=2.13.0",  
    # Mutation testing  
    "cosmic-ray>=8.4.0",  
    "mutmut>=2.4.0",  
    # Linting & formatting  
    "mypy>=1.8.0",  
    "ruff==0.15.0",  
    "bandit[toml]>=1.7.0",  
    "detect-secrets>=1.4.0",  
    # Git & release  
    "pre-commit>=3.6.0",  
    "commitizen>=3.12.0",  
    "gitlint>=0.19.0",  
    # Utilities  
    "fpdf2>=2.7.0",  
]  
test = [  
    "pytest>=8.0.0",  
    "pytest-cov>=4.1.0",  
    "pytest-asyncio>=0.23.0",  
    "pytest-xdist>=3.5.0",  
    "pytest-bdd>=7.0.0",  
]  
  
[project.urls]  
Homepage = "https://github.com/StudentCristian/nWave-github"  
Documentation = "https://github.com/StudentCristian/nWave-github#readme"  
Repository = "https://github.com/StudentCristian/nWave-github"  
Issues = "https://github.com/StudentCristian/nWave-github/issues"
  
# No [project.scripts] — CLI removed for Copilot adaptation  
  
[tool.pytest.ini_options]  
testpaths = ["tests"]  
pythonpath = ["src", "."]  
addopts = [  
    "-ra",  
    "-q",  
    "--strict-markers",  
    "--strict-config",  
    "--import-mode=importlib",  
]  
markers = [  
    "unit: Unit tests (fast, isolated)",  
    "integration: Integration tests (may use external resources)",  
    "acceptance: Acceptance tests (BDD scenarios, may be slow)",  
    "e2e: End-to-end acceptance tests",  
    "slow: Tests that take longer to run",  
]
norecursedirs = [  
    ".venv",  
    ".venv-mutation",  
    "node_modules",  
    ".git",  
    "__pycache__",  
    "reports",  
    "docs",  
    ".nwave",  
]  
asyncio_mode = "auto"  
  
[tool.coverage.run]  
source = ["src/des"]  
branch = true  
omit = [  
    "*/tests/*",  
    "*/__pycache__/*",  
]  
  
[tool.coverage.report]  
exclude_lines = [  
    "pragma: no cover",  
    "def __repr__",  
    "raise NotImplementedError",  
    "if TYPE_CHECKING:",  
    "if __name__ == .__main__.:",  
]  
fail_under = 60  
show_missing = true  
  
[tool.mutmut]  
paths_to_mutate = "src/des"  
tests_dir = "tests/"  
runner = "python -m pytest -x -q"  
  
[tool.mypy]  
python_version = "3.10"  
strict = true  
warn_return_any = true  
warn_unused_configs = true  
disallow_untyped_defs = true  
disallow_incomplete_defs = true  
check_untyped_defs = true  
disallow_untyped_decorators = true  
no_implicit_optional = true  
warn_redundant_casts = true  
warn_unused_ignores = true  
warn_no_return = true  
follow_imports = "silent"  
ignore_missing_imports = false  
  
[[tool.mypy.overrides]]  
module = "tests.*"  
disallow_untyped_defs = false  
  
[tool.ruff]  
target-version = "py310"  
line-length = 88  
src = ["src", "tests"]  
  
[tool.ruff.lint]  
select = [  
    "E",      # pycodestyle errors  
    "W",      # pycodestyle warnings  
    "F",      # Pyflakes  
    "I",      # isort  
    "B",      # flake8-bugbear  
    "C4",     # flake8-comprehensions  
    "UP",     # pyupgrade  
    "ARG",    # flake8-unused-arguments  
    "SIM",    # flake8-simplify  
    "TCH",    # flake8-type-checking  
    "PTH",    # flake8-use-pathlib  
    "PL",     # Pylint  
    "RUF",    # Ruff-specific rules  
]  
ignore = [  
    "E501",  
    "PLR0913",  
    "PLR2004",  
    "PLR0911",  
    "PLR0912",  
    "PLR0915",  
    "PLC0415",  
    "ARG001",  
    "ARG002",  
    "ARG005",  
    "PTH123",  
    "B904",  
    "SIM102",  
    "SIM105",  
    "SIM117",  
    "SIM115",  
    "RUF012",  
    "RUF001",  
    "PTH118",  
    "PTH119",  
    "PTH207",  
    "PTH109",  
    "PTH110",  
    "PTH112",  
    "PTH113",  
    "PTH122",  
    "PLW1510",  
    "PLR0124",  
    "SIM112",  
    "RUF043",  
    "PLW0603",  
    "PLW2901",  
]  
  
[tool.ruff.lint.per-file-ignores]  
"tests/**/*.py" = [  
    "PLW1510",  
    "B007",  
    "B008",  
    "RUF001",  
]  
# Legacy DES test file referencing pre-hexagonal classes  
"tests/des/acceptance/test_post_execution_validation.py" = ["F821"]
  
[tool.ruff.lint.isort]  
known-first-party = ["des"]  
force-single-line = false  
lines-after-imports = 2  
  
[tool.ruff.format]  
quote-style = "double"  
indent-style = "space"  
skip-magic-trailing-comma = false  
line-ending = "auto"  
  
[tool.commitizen]  
version = "3.11.0"  
version_scheme = "pep440"  
version_files = [  
    "nWave-github/VERSION",  
    "nWave-github/framework-catalog.yaml:version",  
]  
tag_format = "v$version"  
name = "cz_conventional_commits"  
commit_parser = "conventional"  
changelog_file = "CHANGELOG.md"  
major_version_zero = false  
bump_message = "chore(release): v$new_version [skip ci]"  
update_changelog_on_bump = true